@@ -11,10 +11,22 @@ import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import hudson.Extension;
 import hudson.util.FormValidation;
+import io.jenkins.plugins.opentelemetry.JenkinsOpenTelemetryPluginConfiguration;
+import io.jenkins.plugins.opentelemetry.OtelUtils;
 import io.jenkins.plugins.opentelemetry.TemplateBindingsProvider;
 import io.jenkins.plugins.opentelemetry.backend.elastic.ElasticLogsBackend;
 import io.jenkins.plugins.opentelemetry.job.log.LogStorageRetriever;
-import org.apache.commons.lang.StringUtils;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import jenkins.model.GlobalConfiguration;
+import org.apache.commons.lang3.StringUtils;
 import org.jenkins.ui.icon.Icon;
 import org.jenkins.ui.icon.IconSet;
 import org.jenkinsci.Symbol;
@@ -22,49 +34,24 @@ import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.Objects;
-import java.util.logging.Logger;
-
-public class ElasticBackend extends ObservabilityBackend implements TemplateBindingsProvider {
-
-    private final static Logger LOGGER = Logger.getLogger(ElasticBackend.class.getName());
+public class ElasticBackend extends ObservabilityBackend {
 
     public static final String OTEL_ELASTIC_URL = "OTEL_ELASTIC_URL";
     public static final String DEFAULT_BACKEND_NAME = "Elastic Observability";
     public static final String DEFAULT_KIBANA_DASHBOARD_TITLE = "Jenkins Overview";
     public static final String DEFAULT_KIBANA_SPACE_IDENTIFIER = "";
-    public static final String DEFAULT_KIBANA_DASHBOARD_QUERY_PARAMETERS = "title=${kibanaDashboardTitle}&" +
-        "_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h%2Fh,to:now))";
+    public static final String DEFAULT_KIBANA_DASHBOARD_QUERY_PARAMETERS = "title=${kibanaDashboardTitle}&"
+            + "_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h%2Fh,to:now))";
 
     static {
         IconSet.icons.addIcon(
-            new Icon(
-                "icon-otel-elastic icon-sm",
-                ICONS_PREFIX + "elastic.svg",
-                Icon.ICON_SMALL_STYLE));
+                new Icon("icon-otel-elastic icon-sm", ICONS_PREFIX + "elastic.svg", Icon.ICON_SMALL_STYLE));
         IconSet.icons.addIcon(
-            new Icon(
-                "icon-otel-elastic icon-md",
-                ICONS_PREFIX + "elastic.svg",
-                Icon.ICON_MEDIUM_STYLE));
+                new Icon("icon-otel-elastic icon-md", ICONS_PREFIX + "elastic.svg", Icon.ICON_MEDIUM_STYLE));
         IconSet.icons.addIcon(
-            new Icon(
-                "icon-otel-elastic icon-lg",
-                ICONS_PREFIX + "elastic.svg",
-                Icon.ICON_LARGE_STYLE));
+                new Icon("icon-otel-elastic icon-lg", ICONS_PREFIX + "elastic.svg", Icon.ICON_LARGE_STYLE));
         IconSet.icons.addIcon(
-            new Icon(
-                "icon-otel-elastic icon-xlg",
-                ICONS_PREFIX + "elastic.svg",
-                Icon.ICON_XLARGE_STYLE));
+                new Icon("icon-otel-elastic icon-xlg", ICONS_PREFIX + "elastic.svg", Icon.ICON_XLARGE_STYLE));
     }
 
     private boolean displayKibanaDashboardLink;
@@ -82,10 +69,10 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
 
     private ElasticLogsBackend elasticLogsBackend;
 
-    @DataBoundConstructor
-    public ElasticBackend() {
+    private boolean enableEDOT;
 
-    }
+    @DataBoundConstructor
+    public ElasticBackend() {}
 
     @Override
     public Map<String, Object> mergeBindings(Map<String, Object> bindings) {
@@ -99,30 +86,32 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
         Map<String, Object> bindings = new LinkedHashMap<>();
         bindings.put(TemplateBindings.BACKEND_NAME, getName());
         bindings.put(TemplateBindings.BACKEND_24_24_ICON_URL, "/plugin/opentelemetry/images/24x24/elastic.png");
-
         bindings.put(TemplateBindings.KIBANA_BASE_URL, this.getKibanaBaseUrl());
-        bindings.put(TemplateBindings.KIBANA_DASHBOARD_TITLE, this.kibanaDashboardTitle);
-        bindings.put(TemplateBindings.KIBANA_SPACE_IDENTIFIER, this.kibanaSpaceIdentifier);
+        bindings.put(TemplateBindings.KIBANA_DASHBOARD_TITLE, OtelUtils.urlEncode(this.kibanaDashboardTitle));
+        bindings.put(TemplateBindings.KIBANA_SPACE_IDENTIFIER, OtelUtils.urlEncode(this.kibanaSpaceIdentifier));
         return bindings;
     }
 
     @CheckForNull
     @Override
     public String getTraceVisualisationUrlTemplate() {
-        return "${kibanaBaseUrl}/app/apm/services/${serviceName}/transactions/view" +
-            "?rangeFrom=${startTime.minusSeconds(600)}" +
-            "&rangeTo=${startTime.plusSeconds(600)}" +
-            "&transactionName=${rootSpanName}" +
-            "&transactionType=job" + // see io.jenkins.plugins.opentelemetry.semconv.JenkinsOtelSemanticAttributes.ELASTIC_TRANSACTION_TYPE
-            "&latencyAggregationType=avg" +
-            "&traceId=${traceId}" +
-            "&transactionId=${spanId}";
+        String transactionType = enableEDOT ? "unknown" : "job";
+        return getEffectiveKibanaURL() + "/app/apm/services/${serviceName}/transactions/view"
+                + "?rangeFrom=${startTime.minusSeconds(600)}"
+                + "&rangeTo=${startTime.plusSeconds(600)}"
+                + "&transactionName=${rootSpanName}"
+                + "&transactionType="
+                + transactionType
+                + // see io.jenkins.plugins.opentelemetry.semconv.JenkinsOtelSemanticAttributes.ELASTIC_TRANSACTION_TYPE
+                "&comparisonEnabled=true"
+                + "&transactionId=${spanId}"
+                + "&traceId=${traceId}";
     }
 
     @CheckForNull
     public String getKibanaBaseUrl() {
         if (kibanaBaseUrl != null && kibanaBaseUrl.endsWith("/")) {
-            kibanaBaseUrl = kibanaBaseUrl.substring(0, kibanaBaseUrl.length()-1);
+            kibanaBaseUrl = kibanaBaseUrl.substring(0, kibanaBaseUrl.length() - 1);
         }
         return kibanaBaseUrl;
     }
@@ -157,15 +146,9 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
             return null;
         }
         // see https://www.elastic.co/guide/en/kibana/6.8/sharing-dashboards.html
-        String kibanaSpaceBaseUrl;
-        if (StringUtils.isBlank(this.getKibanaSpaceIdentifier())) {
-            kibanaSpaceBaseUrl = "${kibanaBaseUrl}";
-        } else {
-            kibanaSpaceBaseUrl = "${kibanaBaseUrl}/s/" + URLEncoder.encode(this.getKibanaSpaceIdentifier(), StandardCharsets.UTF_8);
-        }
-        return kibanaSpaceBaseUrl + "/app/kibana#/dashboards?" +
-            "title=" + URLEncoder.encode(getKibanaDashboardTitle(), StandardCharsets.UTF_8) + "&" +
-            "_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h%2Fh,to:now))";
+        String kibanaSpaceBaseUrl = getEffectiveKibanaURL() + "/app/kibana#/dashboards?";
+        kibanaSpaceBaseUrl += this.getKibanaDashboardUrlParameters();
+        return kibanaSpaceBaseUrl;
     }
 
     public ElasticLogsBackend getElasticLogsBackend() {
@@ -191,6 +174,7 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
     @NonNull
     @Override
     public Map<String, String> getOtelConfigurationProperties() {
+        // FIXME related to https://github.com/jenkinsci/opentelemetry-plugin/issues/683
         if (elasticLogsBackend == null) {
             return Collections.emptyMap();
         } else {
@@ -236,22 +220,51 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
         this.displayKibanaDashboardLink = displayKibanaDashboardLink;
     }
 
+    public boolean isEnableEDOT() {
+        return enableEDOT;
+    }
+
+    @DataBoundSetter
+    public void setEnableEDOT(boolean enableEDOT) {
+        this.enableEDOT = enableEDOT;
+    }
+
+    /**
+     * Returns the effective Kibana URL, including the space identifier if it is set.
+     *
+     * @return the effective Kibana URL
+     */
+    @NonNull
+    public String getEffectiveKibanaURL() {
+        String effectiveUrl = this.getKibanaBaseUrl();
+        if (StringUtils.isNotBlank(this.getKibanaSpaceIdentifier())) {
+            effectiveUrl += "/s/" + this.getKibanaSpaceIdentifier();
+        }
+        return effectiveUrl;
+    }
+
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         ElasticBackend that = (ElasticBackend) o;
-        return displayKibanaDashboardLink == that.displayKibanaDashboardLink &&
-            Objects.equals(kibanaBaseUrl, that.kibanaBaseUrl) &&
-            Objects.equals(kibanaSpaceIdentifier, that.kibanaSpaceIdentifier) &&
-            Objects.equals(kibanaDashboardTitle, that.kibanaDashboardTitle) &&
-            Objects.equals(kibanaDashboardUrlParameters, that.kibanaDashboardUrlParameters)
-            && Objects.equals(elasticLogsBackend, that.elasticLogsBackend);
+        return displayKibanaDashboardLink == that.displayKibanaDashboardLink
+                && Objects.equals(kibanaBaseUrl, that.kibanaBaseUrl)
+                && Objects.equals(kibanaSpaceIdentifier, that.kibanaSpaceIdentifier)
+                && Objects.equals(kibanaDashboardTitle, that.kibanaDashboardTitle)
+                && Objects.equals(kibanaDashboardUrlParameters, that.kibanaDashboardUrlParameters)
+                && Objects.equals(elasticLogsBackend, that.elasticLogsBackend);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(displayKibanaDashboardLink, kibanaBaseUrl, kibanaSpaceIdentifier, kibanaDashboardTitle, kibanaDashboardUrlParameters, elasticLogsBackend);
+        return Objects.hash(
+                displayKibanaDashboardLink,
+                kibanaBaseUrl,
+                kibanaSpaceIdentifier,
+                kibanaDashboardTitle,
+                kibanaDashboardUrlParameters,
+                elasticLogsBackend);
     }
 
     @Extension
@@ -281,8 +294,8 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
                 return FormValidation.ok();
             }
             try {
-                new URL(kibanaBaseUrl);
-            } catch (MalformedURLException e) {
+                new URI(kibanaBaseUrl).toURL();
+            } catch (URISyntaxException | MalformedURLException | IllegalArgumentException e) {
                 return FormValidation.error("Invalid URL: " + e.getMessage());
             }
             return FormValidation.ok();
@@ -292,9 +305,24 @@ public class ElasticBackend extends ObservabilityBackend implements TemplateBind
     /**
      * List the attribute keys of the template bindings exposed by {@link ObservabilityBackend#getBindings()}
      */
-    public interface TemplateBindings extends ObservabilityBackend.TemplateBindings{
+    public interface TemplateBindings extends ObservabilityBackend.TemplateBindings {
         String KIBANA_BASE_URL = "kibanaBaseUrl";
         String KIBANA_DASHBOARD_TITLE = "kibanaDashboardTitle";
         String KIBANA_SPACE_IDENTIFIER = "kibanaSpaceIdentifier";
+    }
+
+    public static Optional<ElasticBackend> get() {
+        Optional<ElasticBackend> ret = null;
+        final JenkinsOpenTelemetryPluginConfiguration configuration =
+                GlobalConfiguration.all().get(JenkinsOpenTelemetryPluginConfiguration.class);
+        if (configuration != null) {
+            Optional<ObservabilityBackend> backend = configuration.getObservabilityBackends().stream()
+                    .filter(x -> x instanceof ElasticBackend)
+                    .findFirst();
+            if (!backend.isEmpty()) {
+                ret = Optional.of((ElasticBackend) backend.get());
+            }
+        }
+        return ret;
     }
 }
