@@ -8,6 +8,7 @@ package io.jenkins.plugins.opentelemetry.backend.elastic;
 import com.cloudbees.plugins.credentials.common.StandardListBoxModel;
 import com.cloudbees.plugins.credentials.common.StandardUsernameCredentials;
 import com.google.errorprone.annotations.MustBeClosed;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
 import groovy.text.Template;
 import hudson.Extension;
 import hudson.Util;
@@ -18,42 +19,48 @@ import hudson.util.ListBoxModel;
 import io.jenkins.plugins.opentelemetry.TemplateBindingsProvider;
 import io.jenkins.plugins.opentelemetry.backend.ObservabilityBackend;
 import io.jenkins.plugins.opentelemetry.jenkins.CredentialsNotFoundException;
-import io.jenkins.plugins.opentelemetry.jenkins.JenkinsCredentialsToApacheHttpCredentialsAdapter;
+import io.jenkins.plugins.opentelemetry.jenkins.HttpAuthHeaderFactory;
 import io.jenkins.plugins.opentelemetry.job.log.LogStorageRetriever;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.NoSuchElementException;
+import java.util.Objects;
+import java.util.logging.Logger;
 import jenkins.model.Jenkins;
-import org.apache.commons.lang.StringUtils;
-import org.apache.http.auth.Credentials;
+import org.apache.commons.lang3.StringUtils;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
-
-import edu.umd.cs.findbugs.annotations.CheckForNull;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.NoSuchElementException;
-import java.util.Objects;
+import org.kohsuke.stapler.interceptor.RequirePOST;
 
 public class ElasticLogsBackendWithJenkinsVisualization extends ElasticLogsBackend {
+    private static final String MSG_ELASTICSEARCH_URL_IS_BLANK =
+            "Elasticsearch URL is blank, logs will not be stored in Elasticsearch";
+
+    private static final Logger logger = Logger.getLogger(ElasticLogsBackendWithJenkinsVisualization.class.getName());
+
     private String elasticsearchUrl;
     private boolean disableSslVerifications;
     private String elasticsearchCredentialsId;
 
     @DataBoundConstructor
-    public ElasticLogsBackendWithJenkinsVisualization() {
-
-    }
+    public ElasticLogsBackendWithJenkinsVisualization() {}
 
     @Override
     @MustBeClosed
     public LogStorageRetriever newLogStorageRetriever(TemplateBindingsProvider templateBindingsProvider) {
         Template buildLogsVisualizationUrlTemplate = getBuildLogsVisualizationUrlTemplate();
         if (StringUtils.isBlank(elasticsearchUrl)) {
-            return null; // FIXME handle case where this logs retriever is miss configured lacking of an Elasticsearch URL. We should use the rendering  ElasticLogsBackendWithVisualizationOnlyThroughKibana
+            logger.warning(MSG_ELASTICSEARCH_URL_IS_BLANK);
+            throw new IllegalStateException(MSG_ELASTICSEARCH_URL_IS_BLANK);
         } else {
-            Credentials credentials = new JenkinsCredentialsToApacheHttpCredentialsAdapter(() -> elasticsearchCredentialsId);
             return new ElasticsearchLogStorageRetriever(
-                this.elasticsearchUrl, disableSslVerifications, credentials,
-                buildLogsVisualizationUrlTemplate, templateBindingsProvider);
+                    this.elasticsearchUrl,
+                    disableSslVerifications,
+                    elasticsearchCredentialsId,
+                    buildLogsVisualizationUrlTemplate,
+                    templateBindingsProvider);
         }
     }
 
@@ -92,8 +99,8 @@ public class ElasticLogsBackendWithJenkinsVisualization extends ElasticLogsBacke
         if (o == null || getClass() != o.getClass()) return false;
         ElasticLogsBackendWithJenkinsVisualization that = (ElasticLogsBackendWithJenkinsVisualization) o;
         return Objects.equals(elasticsearchUrl, that.elasticsearchUrl)
-            && Objects.equals(disableSslVerifications, that.disableSslVerifications)
-            && Objects.equals(elasticsearchCredentialsId, that.elasticsearchCredentialsId);
+                && Objects.equals(disableSslVerifications, that.disableSslVerifications)
+                && Objects.equals(elasticsearchCredentialsId, that.elasticsearchCredentialsId);
     }
 
     @Override
@@ -103,75 +110,83 @@ public class ElasticLogsBackendWithJenkinsVisualization extends ElasticLogsBacke
 
     @Override
     public String toString() {
-        return "ElasticLogsBackendWithVisualizationJenkins{" +
-            "elasticsearchUrl='" + elasticsearchUrl + '\'' +
-            ", disableSslVerifications='" + disableSslVerifications + '\'' +
-            ", elasticsearchCredentialsId='" + elasticsearchCredentialsId + '\'' +
-            '}';
+        return "ElasticLogsBackendWithVisualizationJenkins{" + "elasticsearchUrl='"
+                + elasticsearchUrl + '\'' + ", disableSslVerifications='"
+                + disableSslVerifications + '\'' + ", elasticsearchCredentialsId='"
+                + elasticsearchCredentialsId + '\'' + '}';
     }
 
     @Extension(ordinal = 0)
     public static class DescriptorImpl extends ElasticLogsBackend.DescriptorImpl {
-        private static final String ERROR_MALFORMED_URL = "The url is malformed.";
         @Override
         public String getDisplayName() {
             return "Store pipeline logs In Elastic and visualize logs both in Elastic and through Jenkins";
         }
 
+        @RequirePOST
         public FormValidation doCheckElasticsearchUrl(@QueryParameter("elasticsearchUrl") String url) {
+            if (!isAuthorized()) {
+                return FormValidation.error("You do not have permission to configure this setting.");
+            }
             if (StringUtils.isEmpty(url)) {
                 return FormValidation.ok();
             }
             try {
-                new URL(url);
-            } catch (MalformedURLException e) {
+                new URI(url).toURL();
+            } catch (URISyntaxException | MalformedURLException | IllegalArgumentException e) {
                 return FormValidation.error("Invalid URL: " + e.getMessage());
             }
             return FormValidation.ok();
         }
 
-        public ListBoxModel doFillElasticsearchCredentialsIdItems(Item context, @QueryParameter String elasticsearchCredentialsId) {
-            if (context == null && !Jenkins.get().hasPermission(Jenkins.ADMINISTER)
-                || context != null && !context.hasPermission(context.CONFIGURE)) {
+        @RequirePOST
+        public ListBoxModel doFillElasticsearchCredentialsIdItems(@QueryParameter String elasticsearchCredentialsId) {
+            if (!isAuthorized()) {
                 return new StandardListBoxModel();
             }
 
-            return new StandardListBoxModel().includeEmptyValue()
-                .includeAs(ACL.SYSTEM, context, StandardUsernameCredentials.class)
-                .includeCurrentValue(elasticsearchCredentialsId);
+            return new StandardListBoxModel()
+                    .includeEmptyValue()
+                    .includeAs(ACL.SYSTEM2, (Item) null, StandardUsernameCredentials.class)
+                    .includeCurrentValue(elasticsearchCredentialsId);
         }
 
-        public FormValidation doCheckElasticsearchCredentialsId(Item context, @QueryParameter String elasticsearchCredentialsId) {
-            if (context == null && !Jenkins.get().hasPermission(Jenkins.ADMINISTER)
-                || context != null && !context.hasPermission(context.CONFIGURE)) {
-                return FormValidation.ok();
+        @RequirePOST
+        public FormValidation doCheckElasticsearchCredentialsId(@QueryParameter String elasticsearchCredentialsId) {
+            if (!isAuthorized()) {
+                return FormValidation.error("You do not have permission to configure this setting.");
             }
 
             if (elasticsearchCredentialsId == null || elasticsearchCredentialsId.isEmpty()) {
                 return FormValidation.error("Elasticsearch credentials are missing");
             }
             try {
-                new JenkinsCredentialsToApacheHttpCredentialsAdapter(() -> elasticsearchCredentialsId).getUserPrincipal().getName();
+                new HttpAuthHeaderFactory(elasticsearchCredentialsId).createAuthHeader();
             } catch (CredentialsNotFoundException e) {
                 return FormValidation.error("Elasticsearch credentials are not valid");
             }
             return FormValidation.ok();
         }
 
-        public FormValidation doValidate(@QueryParameter String elasticsearchUrl, @QueryParameter boolean disableSslVerifications, @QueryParameter String elasticsearchCredentialsId) {
+        @RequirePOST
+        public FormValidation doValidate(
+                @QueryParameter String elasticsearchUrl,
+                @QueryParameter boolean disableSslVerifications,
+                @QueryParameter String elasticsearchCredentialsId) {
+            if (!isAuthorized()) {
+                return FormValidation.error("You do not have permission to configure this setting.");
+            }
             FormValidation elasticsearchUrlValidation = doCheckElasticsearchUrl(elasticsearchUrl);
             if (elasticsearchUrlValidation.kind != FormValidation.Kind.OK) {
                 return elasticsearchUrlValidation;
             }
-
-            Credentials credentials = new JenkinsCredentialsToApacheHttpCredentialsAdapter(() -> elasticsearchCredentialsId);
-            // TODO cleanup code, we shouldn't have to instantiate the ElasticsearchLogStorageRetriever to check the proper configuration of the access to Elasticsearch
-            try (ElasticsearchLogStorageRetriever elasticsearchLogStorageRetriever = new ElasticsearchLogStorageRetriever(
-                    elasticsearchUrl,
-                    disableSslVerifications,
-                    credentials,
-                    ObservabilityBackend.ERROR_TEMPLATE,
-                    TemplateBindingsProvider.empty())) {
+            try (ElasticsearchLogStorageRetriever elasticsearchLogStorageRetriever =
+                    new ElasticsearchLogStorageRetriever(
+                            elasticsearchUrl,
+                            disableSslVerifications,
+                            elasticsearchCredentialsId,
+                            ObservabilityBackend.ERROR_TEMPLATE,
+                            TemplateBindingsProvider.empty())) {
 
                 return FormValidation.aggregate(elasticsearchLogStorageRetriever.checkElasticsearchSetup());
             } catch (NoSuchElementException e) {
@@ -179,6 +194,14 @@ public class ElasticLogsBackendWithJenkinsVisualization extends ElasticLogsBacke
             } catch (Exception e) {
                 return FormValidation.error(e, e.getMessage());
             }
+        }
+
+        /**
+         * Checks if the user has permission to configure the backend.
+         * @return true if the user is authorized, false otherwise
+         */
+        private boolean isAuthorized() {
+            return Jenkins.get().hasPermission(Jenkins.ADMINISTER);
         }
     }
 }
